--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,10 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "Projects"
+    url: /projects/
+  - title: "Publications"
+    url: /publications/
+  - title: "Press & Awards"
+    url: /press&awards/
+  - title: "Resume"
+    url: /resume/
+
